--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: azure;
+  background-image: url("https://d3nn873nee648n.cloudfront.net/1200x1800-new/19303/SM915751.jpg");
 }
 
 code {
