--- a/src/App.css
+++ b/src/App.css
@@ -4,14 +4,87 @@
   box-sizing: border-box;
 }
 .App{
-  padding: 80px 0;
-    background-color: white;
-    width: 400px;
-    margin: 100px auto 0;
-    border-radius: 3px;
-    box-shadow: 0 0 3px 3px black;
+  padding: 35px 0;
+    /* background-color: white; */
+    width: 700px;
+    margin: 100px 100px 0;
+    border-radius: 5px;
+    box-shadow: 0 0 5px 1px rgb(94, 94, 94);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+.input label{
+  color: white;
+  font-size: 22px;
+  margin-left:10px ;
+}
+.input {
+  display: flex;
+  align-items: center;
+}
+.input input{
+  width: 15px;
+  height: 15px;
+}
+.button {
+  cursor: pointer;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: rgb(20, 20, 20);
+  border: none;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.164);
+  cursor: pointer;
+  transition-duration: .3s;
+  overflow: hidden;
+  position: relative;
+}
+
+.svgIcon {
+  width: 12px;
+  transition-duration: .3s;
+}
+
+.svgIcon path {
+  fill: white;
+}
+
+.button:hover {
+  width: 140px;
+  border-radius: 50px;
+  transition-duration: .3s;
+  background-color: rgb(255, 69, 69);
+  align-items: center;
+}
+
+.button:hover .svgIcon {
+  width: 50px;
+  transition-duration: .3s;
+  transform: translateY(60%);
+}
+
+.button::before {
+  position: absolute;
+  top: -20px;
+  content: "Delete";
+  color: white;
+  transition-duration: .3s;
+  font-size: 2px;
+}
+
+.button:hover::before {
+  font-size: 13px;
+  opacity: 1;
+  transform: translateY(30px);
+  transition-duration: .3s;
+}
+.item label{
+      text-shadow: 0 0 4px red;
+    font-weight: bold;
 }
